# flux-mcf

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  GETTING_STARTED.md  README.md  generate_docs.sh  install_cuda_deps.sh  install_deps.sh
cmake/: InstallTarget.cmake
docker/: README.md
mcf_core/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  libexports.txt
mcf_core/cmake/: McfCoreConfig.cmake.in
mcf_core/include/mcf_core/: Component.h  ComponentInstantiator.h  ComponentLogger.h  ComponentManager.h  ComponentTimer.h  ComponentTraceController.h  ComponentTraceEventGenerator.h  ComponentTraceMessages.h  ComponentType.h  CountingIdGenerator.h  DefaultIdGenerator.h  ErrorMacros.h  EventTimingController.h  ExtMemValue.h  IComponent.h  IComponentConfig.h  IDynamicEventSource.h  IEventTimingController.h  IExtMemValue.h  ISimpleEventSource.h  ITriggerable.h  IdGeneratorInterface.h  LoggingMacros.h  Mcf.h  Messages.h  Mutexes.h  PerfLogger.h  Plugin.h  PluginInterface.h  PluginLoader.h  PluginManager.h  Port.h  PortTriggerHandler.h  QueuedEventSource.h  ReplayEventController.h  SimpleEventSourceWrapper.h  SystemConfigurator.h  ThreadName.h  TimeService.h  TimestampType.h  (+8 more)
mcf_core/include/mcf_core/util/: JsonLoader.h  JsonValueExtractor.h  MergeValues.h
mcf_core/src/: Component.cpp  ComponentInstantiator.cpp  ComponentLogger.cpp  ComponentLoggerGlobals.cpp  ComponentManager.cpp  ComponentTimer.cpp  ComponentTraceController.cpp  ComponentTraceEventGenerator.cpp  ComponentTraceGlobals.cpp  CountingIdGenerator.cpp  DefaultIdGenerator.cpp  EventTimingController.cpp  ExtMemValue.cpp  Mutexes.cpp  PluginLoader.cpp  PluginManager.cpp  PortTriggerHandler.cpp  QueuedEventSource.cpp  ReplayEventController.cpp  SimpleEventSourceWrapper.cpp  SystemConfigurator.cpp  ThreadName.cpp  TimestampType.cpp  TopicTriggerFlags.cpp  Trace.cpp  ValueRecorder.cpp  ValueStore.cpp
mcf_core/src/util/: JsonLoader.cpp  JsonValueExtractor.cpp  MergeValues.cpp
mcf_core/test/: CMakeLists.txt
mcf_core/test/include/test/: TestUtils.h  TestValue.h
mcf_core/test/src/: TestUtils.cpp  component_test.cpp  config_check_test.cpp  instantiator_test.cpp  log_test.cpp  mutex_test.cpp  plugin_dso.cpp  plugin_test.cpp  port_map_test.cpp  system_configuration_test.cpp  time_service_test.cpp  value_recorder_test.cpp  value_store_test.cpp
mcf_core/test/src/util/: TestJsonValueExtractor.cpp
mcf_cuda/: CMakeLists.txt  libexports.txt
mcf_cuda/cmake/: McfCudaConfig.cmake.in
mcf_cuda/include/mcf_cuda/: CudaCachingAllocator.h  CudaError.h  CudaErrorHelper.h  CudaExtMemValue.h  CudaMemory.h  GenArray.h
mcf_cuda/src/: CudaCachingAllocator.cpp  CudaExtMemValue.cpp  GenArray.cpp
mcf_demos/mcf_cpu_demo/: .gitignore  CMakeLists.txt  README.md  run_demo.sh  setup_env.sh
mcf_demos/mcf_cpu_demo/config/: ImageFilterComponent.json
mcf_demos/mcf_cpu_demo/include/mcf_cpu_demo/: ColourInverterComponent.h  ImageFilterComponent.h
mcf_demos/mcf_cpu_demo/mcf_cpu_demo_value_types/: CMakeLists.txt
mcf_demos/mcf_cpu_demo/mcf_cpu_demo_value_types/value_types_json/: ProjectDefinitions.json
mcf_demos/mcf_cpu_demo/mcf_cpu_demo_value_types/value_types_json/demo_types/: DemoImageFilterParams.json  DemoImageUint8.json
mcf_demos/mcf_cpu_demo/python/: mcf_sender_receiver.py  process_images.py
mcf_demos/mcf_cpu_demo/src/: ColourInverterComponent.cpp  ImageFilterComponent.cpp  Main.cpp
mcf_demos/mcf_cuda_demo/: CMakeLists.txt  README.md  run_demo.sh  setup_env.sh
mcf_demos/mcf_cuda_demo/config/: ImageFilterCudaComponent.json
mcf_demos/mcf_cuda_demo/include/mcf_cuda_demo/: BoxFilter.h  ColourInverterComponent.h  ImageFilterCudaComponent.h
mcf_demos/mcf_cuda_demo/mcf_cuda_demo_value_types/: CMakeLists.txt
mcf_demos/mcf_cuda_demo/mcf_cuda_demo_value_types/value_types_json/: ProjectDefinitions.json
mcf_demos/mcf_cuda_demo/mcf_cuda_demo_value_types/value_types_json/demo_types/: DemoImgFormat.json
mcf_demos/mcf_cuda_demo/python/: mcf_sender_receiver.py  process_images.py
mcf_demos/mcf_cuda_demo/src/: BoxFilter.cu  ColourInverterComponent.cpp  ImageFilterCudaComponent.cpp  Main.cpp
mcf_demos/mcf_value_type_demo/: CMakeLists.txt  README.md  run_demo.sh
mcf_demos/mcf_value_type_demo/include/mcf_value_type_demo/: PoseReceiverComponent.h
mcf_demos/mcf_value_type_demo/mcf_example_types/: .gitignore  CMakeLists.txt
mcf_demos/mcf_value_type_demo/mcf_example_types/value_types_json/: ProjectDefinitions.json
mcf_demos/mcf_value_type_demo/python/: send_pose.py
mcf_demos/mcf_value_type_demo/src/: Main.cpp  PoseReceiverComponent.cpp
mcf_remote/: CMakeLists.txt  rakefile.rb
mcf_remote/cmake/: McfRemoteConfig.cmake.in  McfRemoteShmemConfig.cmake.in
mcf_remote/include/mcf_remote/: AbstractReceiver.h  AbstractSender.h  AbstractZmqMsgPackReceiver.h  IComEventListener.h  Remote.h  RemoteControl.h  RemotePair.h  RemoteReceiver.h  RemoteSender.h  RemoteService.h  RemoteServiceConfigurator.h  RemoteServiceUtils.h  RemoteStatusTracker.h  SerializedValue.h  ShmemClient.h  ShmemHandlers.h  ShmemKeeper.h  ZmqMsgPackSender.h  ZmqMsgPackUtils.h  ZmqMsgPackValueReceiver.h
mcf_remote/src/: Remote.cpp  RemoteControl.cpp  RemoteReceiver.cpp  RemoteSender.cpp  RemoteService.cpp  RemoteServiceConfigurator.cpp  RemoteStatusTracker.cpp  SerializedValue.cpp  ShmemClient.cpp  ShmemKeeper.cpp  ZmqMsgPackSender.cpp  ZmqMsgPackUtils.cpp  ZmqMsgPackValueReceiver.cpp
mcf_remote/test/: CMakeLists.txt
mcf_remote/test/mcf_remote_value_types/: CMakeLists.txt
mcf_remote/test/mcf_remote_value_types/value_types_json/: ProjectDefinitions.json
mcf_remote/test/perf/: perf_messages.h  receiver.cpp  sender.cpp
mcf_remote/test/python/: communication_test.py  test_rc.py  test_rs.py
mcf_remote/test/python/utils/: ProcessRunner.py  TestTypeEquality.py
mcf_remote/test/src/: communication_test_main.cpp  generator.cpp  rc_test_main.cpp  remote_control_test.cpp  remote_service_configurator_test.cpp  remote_service_test.cpp  remote_status_tracker_test.cpp  responder.cpp  simple.cpp  zmq_msgpack_test.cpp
(+136 files in other folders)
